--- a/safepoint-analyzer-commons/pom.xml
+++ b/safepoint-analyzer-commons/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>parent</artifactId>
+        <artifactId>jvm-gc-logs-analyzer</artifactId>
         <groupId>pl.ks.profiling</groupId>
         <version>1.1-SNAPSHOT</version>
     </parent>
@@ -28,6 +28,10 @@
             <groupId>pl.ks.profiling</groupId>
             <artifactId>gui-commons</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
         </dependency>
     </dependencies>
 </project>
