Add concatenation on files loading

--- a/io-utils/pom.xml
+++ b/io-utils/pom.xml
@@ -24,5 +24,9 @@
             <groupId>org.tukaani</groupId>
             <artifactId>xz</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
