--- a/safepoint-analyzer-web/pom.xml
+++ b/safepoint-analyzer-web/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.github.krzysztofslusarski</groupId>
+            <artifactId>continuous-async-profiler-spring-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
