--- a/safepoint-analyzer-web/src/main/resources/application-prod.properties
+++ b/safepoint-analyzer-web/src/main/resources/application-prod.properties
@@ -12,3 +12,5 @@ server.tomcat.accesslog.rename-on-rotate=false
 server.tomcat.accesslog.request-attributes-enabled=false
 server.tomcat.accesslog.rotate=true
 server.tomcat.accesslog.suffix=.log
+
+asyncProfiler.continuous.profilerLibPath=/home/pasqal/libasyncProfiler.so
