--- a/safepoint-analyzer-web/pom.xml
+++ b/safepoint-analyzer-web/pom.xml
@@ -48,6 +48,10 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>axios</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
