Add docker support

--- a/safepoint-analyzer-web/src/main/resources/application-dev.yml
+++ b/safepoint-analyzer-web/src/main/resources/application-dev.yml
@@ -1,12 +1,9 @@
 spring:
   thymeleaf:
     cache: false
-  servlet:
-    multipart:
-      max-file-size: 310MB
-      max-request-size: 301MB
 server:
-  tomcat.max-http-post-size: 100MB
   port: 8079
+  tomcat:
+    max-http-form-post-size: 100MB
 
 safepoint.files.dir: /home/pasq/SafepointsInputs/
