--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <version>2.4.1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -37,6 +37,7 @@
         <spock.version>1.3-groovy-2.5</spock.version>
         <gmavenplus-plugin.version>1.6.2</gmavenplus-plugin.version>
         <axios.version>0.21.1</axios.version>
+        <spring-boot.build-image.imageName>gclogs.com/${project.artifactId}:${project.version}</spring-boot.build-image.imageName>
     </properties>
 
     <dependencyManagement>
@@ -67,9 +68,9 @@
                 <version>30.1-jre</version>
             </dependency>
             <dependency>
-                <groupId>org.hibernate</groupId>
+                <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>6.0.16.Final</version>
+                <version>6.0.17.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.tukaani</groupId>
