--- a/safepoint-analyzer-web/pom.xml
+++ b/safepoint-analyzer-web/pom.xml
@@ -45,7 +45,7 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
         <dependency>
