--- a/safepoint-analyzer-commons/pom.xml
+++ b/safepoint-analyzer-commons/pom.xml
@@ -33,5 +33,11 @@
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>pl.ks.profiling</groupId>
+            <artifactId>io-utils</artifactId>
+            <version>1.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
