--- a/.github/workflows/maven-test.yml
+++ b/.github/workflows/maven-test.yml
@@ -13,9 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11.0.9
-      uses: actions/setup-java@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
       with:
-        java-version: 11.0.9
+        distribution: 'temurin'
+        java-version: 17
     - name: Run tests
       run: mvn test
